--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
     <div class="services-right">
         
             <form class="contact-form" action="https://formspree.io/f/xjvqbnlw" method="POST">
-                <input type="text" name="Name" placeholder="Full Name" required>
-                <input type="email" name="Email" placeholder="Email" required>
+                <input type="text" name="Name" placeholder="Full Name" >
+                <input type="email" name="Email" placeholder="Email">
                 <textarea rows="6" name="message" placeholder="Message"></textarea>
-                <label for="cars" required>Would you like someone to contact and assist you?</label>
+                <label for="cars" >Would you like someone to contact and assist you?</label>
            <select id="option" name="option" required>
         <option value="">--</option>
       <option value="Yes contact me">Yes please</option>
